--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
-  <a class="footer_item" href="/thanks">ack.</a>
-  <a class="footer_item" href="javascript::void(0)">resume</a>
+  <a class="footer_item" target="_blank" rel="noreferrer noopener" href="https://www.linkedin.com/in/%F0%9F%9F%A2-ignacio-tolstoy-b4334749/">linkedin</a>
   <a class="footer_item" href="/feed.xml">rss</a>
   <span class="footer_item">&copy; {{ site.time | date: "%Y" }}</span>
   <small class="footer_copyright">
     <!-- Klisé Theme: https://github.com/piharpi/jekyll-klise -->
+    Powered by the amazeballs
     <a
       href="https://github.com/piharpi/jekyll-klise"
       target="_blank"
